--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
 
       <h1>About Us</h1>
 
+      <br><p>The Washington University Climbing Club is a loose association of students and faculty that enjoy rock climbing and bouldering both indoors and outdoors. We offer discount memberships to the local indoor climbing gyms, and we arrange numberous outdoor climbing trips every semester.</p>
+
+      <p>As a member of the club, you will gain access to a group of friendly climbers of all skill levels who are interested in both teaching and learning how to climb harder. The club organizes carpools to the local gyms every week and there are always members willing to go climb and hang out.</p>
+
+      <p>Join the club and get climbing!</p><br>
+
       <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
@@ -76,14 +82,6 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
-
-      <p>Short blurb about the club and it's functions.</p>
-
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc bibendum maximus erat. In luctus malesuada mi tincidunt tincidunt. Cras suscipit nulla volutpat erat eleifend, quis maximus ante hendrerit. Sed purus augue, aliquam eu purus ut, elementum elementum sapien. Integer turpis diam, mattis quis neque a, elementum sollicitudin tortor. Fusce viverra eros vitae ultrices sagittis. Praesent id ullamcorper augue, in dapibus tortor. Maecenas vel libero sit amet leo fringilla consequat. Nulla id faucibus dolor. Nam nec ipsum turpis. Aliquam accumsan enim vel justo pulvinar consequat. Ut vitae diam odio. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin id rhoncus felis. Vivamus pulvinar pharetra nisl, sed faucibus purus convallis id.</p>
-
-      <p>Quisque sollicitudin mollis ipsum eget interdum. Integer aliquam massa vitae vulputate finibus. Sed tincidunt tellus ac interdum ornare. Suspendisse id libero orci. Praesent vitae eros consectetur erat convallis aliquet. Vivamus vel tincidunt tellus. Sed arcu nibh, vestibulum in imperdiet ut, volutpat semper lacus. Aenean aliquam ut est eu tristique. Nam varius ultrices lorem a efficitur. Etiam viverra venenatis nulla, non pellentesque justo iaculis vitae.</p>
-
-      <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam tincidunt sapien quis egestas aliquam. Vestibulum dignissim libero at odio consequat, et sagittis tortor scelerisque. Aenean lacinia nibh ullamcorper massa sodales, eget lacinia ex malesuada. Mauris elementum, eros non congue semper, neque nulla ultricies nibh, aliquet faucibus tortor eros eu nisi. Nullam auctor eu lacus in fringilla. Sed vestibulum, enim nec bibendum ultrices, odio tellus varius dolor, nec interdum turpis libero et enim. Vestibulum tincidunt ante non egestas lacinia. Aliquam erat volutpat. Praesent malesuada porta metus non viverra. Vestibulum et est sit amet lacus sodales sagittis ut id urna.</p>
 
     </div>
 
