--- a/prices.html
+++ b/prices.html
@@ -31,11 +31,15 @@
         </div>
       </nav>
 
-      <h1>Membership Prices</h1>
+      <h1>Membership Prices</h1><br>
 
-      <p>Prices go here.</p>
+      <ul>
+        <li>The full membership to Upper Limits (includes both gyms) and the full member to Climb So Ill are both $100.</li>
+        <li>The limited membership to Upper Limits (includes both gyms) covers climbing on Wednesdays and Thursdays and costs $25.</li>
+        <li>The 10 punch passes to So Ill cost $10</li>
+      </ul>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc bibendum maximus erat. In luctus malesuada mi tincidunt tincidunt. Cras suscipit nulla volutpat erat eleifend, quis maximus ante hendrerit. Sed purus augue, aliquam eu purus ut, elementum elementum sapien. Integer turpis diam, mattis quis neque a, elementum sollicitudin tortor. Fusce viverra eros vitae ultrices sagittis. Praesent id ullamcorper augue, in dapibus tortor. Maecenas vel libero sit amet leo fringilla consequat. Nulla id faucibus dolor. Nam nec ipsum turpis. Aliquam accumsan enim vel justo pulvinar consequat. Ut vitae diam odio. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin id rhoncus felis. Vivamus pulvinar pharetra nisl, sed faucibus purus convallis id.</p><br>
+      <p>All full and limited memberships are valid for the entire semester during which they are purchased.</p><br>
 
       <form action="success.html">
         What's your name?<br>
@@ -43,9 +47,10 @@
         What's your e-mail address?<br>
         <input type="text" class="input-email"><br><br>
         Which membership type(s) are you interested in?<br>
-        <input type="radio" checked>Option 1<br>
-        <input type="radio">Option 2<br>
-        <input type="radio">Option 3<br><br>
+        <input type="radio" checked>Full Upper Limits Membership ($100)<br>
+        <input type="radio">Full Climb So Ill Membership ($100)<br>
+        <input type="radio">Limited Upper Limits Membership ($25)<br>
+        <input type="radio">10 Punch Climb So Ill Pass ($10)<br><br>
         <button type="submit" class="btn btn-default">Join the club!</button>
       </form>
 
