--- a/team.html
+++ b/team.html
@@ -31,13 +31,22 @@
         </div>
       </nav>
 
-      <h1>Competitive Climbing Team</h1>
+      <h1>Competitive Climbing Team</h1><br>
 
-      <p>Info about team practices, goals, and prerequisites.</p>
+      <p>The Washington University Climbing Team is a group of serious climbers looking to improve their climbing ability. There is no skill requirement to join the team, but you must be willing to attend scheduled practices twice a week, and ideally climb outside of practice at least once a week. In return for your dedication and effort, you will be able to climb regularly with some of the best climbers in the St. Louis area, along with many people of similar skill level.</p>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc bibendum maximus erat. In luctus malesuada mi tincidunt tincidunt. Cras suscipit nulla volutpat erat eleifend, quis maximus ante hendrerit. Sed purus augue, aliquam eu purus ut, elementum elementum sapien. Integer turpis diam, mattis quis neque a, elementum sollicitudin tortor. Fusce viverra eros vitae ultrices sagittis. Praesent id ullamcorper augue, in dapibus tortor. Maecenas vel libero sit amet leo fringilla consequat. Nulla id faucibus dolor. Nam nec ipsum turpis. Aliquam accumsan enim vel justo pulvinar consequat. Ut vitae diam odio. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin id rhoncus felis. Vivamus pulvinar pharetra nisl, sed faucibus purus convallis id.</p>
+      <p>The climbing team participates in many climbing competitions over the course of a school year. In the fall, many bouldering competitions are available to the team members, and the team will partially reimburse the entry fee for all members. In the spring, we switch gears and start competing in roped climbing, and preparing for outdoor sends.</p>
 
-      <p>Quisque sollicitudin mollis ipsum eget interdum. Integer aliquam massa vitae vulputate finibus. Sed tincidunt tellus ac interdum ornare. Suspendisse id libero orci. Praesent vitae eros consectetur erat convallis aliquet. Vivamus vel tincidunt tellus. Sed arcu nibh, vestibulum in imperdiet ut, volutpat semper lacus. Aenean aliquam ut est eu tristique. Nam varius ultrices lorem a efficitur. Etiam viverra venenatis nulla, non pellentesque justo iaculis vitae.</p><br>
+      <p>Climbing with the team requires dedication and focus, but also affords you many opportunities to learn from other serious climbers and to push your limits as a climber.</p>
+
+      <p>Interested?</p><br>
+
+      <p>Requirements:</p>
+      <ul>
+        <li>Full membership (Climb So Ill for fall semester and Upper Limits for spring semester)</li>
+        <li>Willingness to attend two regular practices each week</li>
+        <li>An intense desire to improve as a climber</li>
+      </ul><br>
 
       <form action="success.html">
         What's your name?<br>
