--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About Us</title>
+    <title>Wash U Climbing Club</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -22,68 +23,15 @@
 
     <div class="container">
 
-      <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-          <h3 class="header">Climbing Club</h3>
-          <a href="index.html">About Us</a>
-          <a href="prices.html">Memberships</a>
-          <a href="team.html">Climbing Team</a>
-        </div>
-      </nav>
-
-      <h1>About Us</h1>
-
-      <br><p>The Washington University Climbing Club is a loose association of students and faculty that enjoy rock climbing and bouldering both indoors and outdoors. We offer discount memberships to the local indoor climbing gyms, and we arrange numberous outdoor climbing trips every semester.</p>
-
-      <p>As a member of the club, you will gain access to a group of friendly climbers of all skill levels who are interested in both teaching and learning how to climb harder. The club organizes carpools to the local gyms every week and there are always members willing to go climb and hang out.</p>
-
-      <p>Join the club and get climbing!</p><br>
-
-      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-          <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-        </ol>
-
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner" role="listbox">
-
-          <div class="item active">
-            <img src="imgs/pic8.jpg" alt="...">
-            <div class="carousel-caption">
-              One of our many outdoor climbing trips!
-            </div>
-          </div>
-
-          <div class="item">
-            <img src="imgs/pic2.jpg" alt="...">
-            <div class="carousel-caption">
-              Indoor climbing every week!
-            </div>
-          </div>
-
-          <div class="item">
-            <img src="imgs/pic3.jpg" alt="...">
-            <div class="carousel-caption">
-              A competition climbing team!
-            </div>
-          </div>
-        </div>
-
-        <!-- Controls -->
-        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
+      <img src="imgs/navbar_logo.png" alt="..."><br>
+      
+      <div class="links">
+        <a href="about.html">About Us</a>
+        <a href="prices.html">Memberships</a>
+        <a href="team.html">Climbing Team</a>
       </div>
 
-    </div>
+    <div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
