--- a/prices.html
+++ b/prices.html
@@ -24,8 +24,8 @@
 
       <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
-          <h3 class="header">Climbing Club</h3>
-          <a href="index.html">About Us</a>
+          <img class="navbar-logo" src="imgs/navbar_logo.png">
+          <a href="about.html">About Us</a>
           <a href="prices.html">Memberships</a>
           <a href="team.html">Climbing Team</a>
         </div>
