--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       <img src="imgs/navbar_logo.png" alt="..."><br>
       
       <div class="links">
-        <a href="about.html">About Us</a>
-        <a href="prices.html">Memberships</a>
-        <a href="team.html">Climbing Team</a>
+        <a href="about.html" class="about">About Us</a>
+        <a href="prices.html" class="prices">Memberships</a>
+        <a href="team.html" class="team">Climbing Team</a>
       </div>
 
     <div>
