--- a/prices.html
+++ b/prices.html
@@ -9,6 +9,7 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
+    <link href="css/prices.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -20,14 +21,14 @@
   
   <body>
 
-    <div class="container">
+    <div class="container prices">
 
       <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
-          <img class="navbar-logo" src="imgs/navbar_logo.png">
-          <a href="about.html">About Us</a>
-          <a href="prices.html">Memberships</a>
-          <a href="team.html">Climbing Team</a>
+          <a href="index.html"><img class="navbar-logo" src="imgs/navbar_logo.png"></a>
+          <a href="about.html" class="about">About Us</a>
+          <a href="prices.html" class="prices">Memberships</a>
+          <a href="team.html" class="team">Climbing Team</a>
         </div>
       </nav>
 
