--- a/success.html
+++ b/success.html
@@ -24,10 +24,10 @@
 
       <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
-          <img class="navbar-logo" src="imgs/navbar_logo.png">
-          <a href="about.html">About Us</a>
-          <a href="prices.html">Memberships</a>
-          <a href="team.html">Climbing Team</a>
+          <a href="index.html"><img class="navbar-logo" src="imgs/navbar_logo.png"></a>
+          <a href="about.html" class="about">About Us</a>
+          <a href="prices.html" class="prices">Memberships</a>
+          <a href="team.html" class="team">Climbing Team</a>
         </div>
       </nav>
 
